horizontal scroll fixed

--- a/src/components/ui/cards/card-with-image/card-with-image.module.scss
+++ b/src/components/ui/cards/card-with-image/card-with-image.module.scss
@@ -201,6 +201,11 @@
   }
 }
 
+.link {
+  text-decoration: none;
+  width: fit-content;
+}
+
 @media screen and (max-width: 800px) {
   .image_type_cover {
     max-height: 180px;
@@ -251,8 +256,4 @@
       height: 120px;
     }
   }
-}
-
-.link {
-  text-decoration: none;
 }
