--- a/src/components/ui/lazy-load-cards/lazy-load-cards.module.scss
+++ b/src/components/ui/lazy-load-cards/lazy-load-cards.module.scss
@@ -6,6 +6,7 @@
   grid-template-columns: repeat(auto-fit, minmax(250px, 288px));
   gap: 30px;
   justify-content: center;
+  justify-items: center;
 }
 
 @media screen and (max-width: 600px) {
